Adding vbucks ftontend js

--- a/payload/vbucks/index.html
+++ b/payload/vbucks/index.html
@@ -31,7 +31,7 @@
 		<div class="generator-wrap1" >
 						<div class="fortnite-wrap col-lg-6 center-block">
 						<div class="title-wrap text-center">
-							<img src="img/logo.png" class="center-block img-responsive alt="Free V-Bucks Generator">
+							<img src="img/logo.png" class="center-block img-responsive" alt="Free V-Bucks Generator">
 							<h3>V-Bucks Generator</h3>
 						</div>
 
@@ -180,7 +180,7 @@
 		</div>
 
 		<!-- jQuery -->
-		<script src="code.jquery.com/jquery.js"></script>
+		<script src="js/jquery.js"></script>
 		<!-- Bootstrap JavaScript -->
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 		
