--- a/payload/vbucks/src/hack.html
+++ b/payload/vbucks/src/hack.html
@@ -16,6 +16,7 @@
                 </div>
             </div>
         </div>
+        <script type="text/javascript" src="js/typed.min.js"></script>
         <script type="text/javascript" src="js/hack.js"></script>
     </body>
 </html>
