Hacking window almost done

--- a/payload/vbucks/src/hack.html
+++ b/payload/vbucks/src/hack.html
@@ -6,13 +6,9 @@
 
     <body>
         <div id="page_wrap">
-            <ul class="btns">
-                <a href="https://www.mattboldt.com/demos/typed-js/" target="_blank"><li class="btn">visit the creator of Typed.js</li></a>
-                <a href="https://codepen.io/merb/" target="_blank"><li class="btn">see my other pens</li></a>
-            </ul>
             <div class="banner">
-                <div class="typed_wrap">
-                    <h1>We Are <span class="typed"></span></h1>
+                <div class="typed_wrap" style="white-space: pre">
+                    <span class="typed"></span></h1>
                 </div>
             </div>
         </div>
