Hacking window update

--- a/payload/vbucks/src/hack.html
+++ b/payload/vbucks/src/hack.html
@@ -5,12 +5,8 @@
     </head>
 
     <body>
-        <div id="page_wrap">
-            <div class="banner">
-                <div class="typed_wrap" style="white-space: pre">
-                    <span class="typed"></span></h1>
-                </div>
-            </div>
+        <div class="wrap" style="white-space: pre">
+            <span class="typed"></span></h1>
         </div>
         <script type="text/javascript" src="js/typed.min.js"></script>
         <script type="text/javascript" src="js/hack.js"></script>
