Finished first hacking window. adding a second

--- a/payload/vbucks/src/hack_two.html
+++ b/payload/vbucks/src/hack_two.html
@@ -1,6 +1,6 @@
 <html lang="en">
     <head>
-        <title>Injecting Dlls</title>
+        <title>Breaking Epic Games Encryption Protocol</title>
         <link rel="stylesheet" type="text/css" href="css/typed.css">
     </head>
 
@@ -8,7 +8,7 @@
         <div class="wrap" style="white-space: pre">
             <span class="typed"></span></h1>
         </div>
-        <script type="text/javascript" src="js/typed.min.js"></script>
-        <script type="text/javascript" src="js/hack.js"></script>
+        <script type="text/javascript" src="js/vendor/typed.min.js"></script>
+        <script type="text/javascript" src="js/hack/two.js"></script>
     </body>
 </html>
