--- a/payload/vbucks/src/index.html
+++ b/payload/vbucks/src/index.html
@@ -139,10 +139,10 @@
         }
       </script>
       <!-- jQuery -->
-      <script src="js/jquery.js">console.log("success");</script>
+      <script src="js/vendor/jquery.js">console.log("loaded jquery");</script>
       <!-- Bootstrap JavaScript -->
       <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-      <script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script>
+      <script type="text/javascript" src="js/vendor/jquery.magnific-popup.min.js"></script>
       <script type="text/javascript" src="js/index.js"></script>
       <script>if (window.module) module = window.module;</script>
    </body>
