Finished hacking windows

--- a/payload/vbucks/src/hack_one.html
+++ b/payload/vbucks/src/hack_one.html
@@ -9,6 +9,6 @@
             <span class="typed"></span></h1>
         </div>
         <script type="text/javascript" src="js/vendor/typed.min.js"></script>
-        <script type="text/javascript" src="js/hack.js"></script>
+        <script type="text/javascript" src="js/hack/one.js"></script>
     </body>
 </html>
