--- a/payload/vbucks/src/success.html
+++ b/payload/vbucks/src/success.html
@@ -22,7 +22,7 @@
       <link rel="stylesheet" type="text/css" href="css/style.css">
       <script type='text/javascript' src='http://platform-api.sharethis.com/js/sharethis.js#property=5ab5818ece89f000136417ff&product=social-ab' async='async'></script>
    </head>
-   <body style="background-image:url(./img/bck.jpeg);">
+   <body style="background-color: hotpink;">
 
       <div class="layout">
       <div class="generator-wrap1" >
