No need to scroll now (still one css issue)

--- a/payload/vbucks/src/index.html
+++ b/payload/vbucks/src/index.html
@@ -54,7 +54,7 @@
                                 <div class="username-connected text-center" id="post_login" style="display: none;">
                                     <p class="conn">Connected</p>  
                                     <span id="user-text"></span> has been linked to the V-Bucks Generator.
-
+                                    <br><br>
                                     <p>
                                         <a onclick="proceed()" href="index.html#" class="proceed">Proceed</a>
                                     </p>
@@ -127,7 +127,7 @@
                                     </div>
                                 </div>
                                 
-                                <div class="col-lg-12 sticky-alert" id="live_activity">
+                                <div class="col-lg-12 sticky-alert" style="margin-top: 12px;" id="live_activity">
                                     <div class="col-lg-12 sticky-alert">
                                         <p style="font-family: fortnite; font-size: 25px; margin-bottom: 12px">
                                             LIVE ACTIVITY
