Added barless window style to success page.

--- a/payload/vbucks/src/success.html
+++ b/payload/vbucks/src/success.html
@@ -41,7 +41,7 @@
                         </div>
                      </div>
                      <div class="username-connected text-center" style="display: none;">
-                        <p>Your Username<span id="user-text"></span> is</p>
+                        <p>Account<span id="user-text"></span> is</p>
                         <p class="conn">Connected</p>
                      </div>
                      <div class="select-vbucks col-lg-12" >
