showing correctly now

--- a/payload/vbucks/src/index.html
+++ b/payload/vbucks/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="main">
+<html lang="en">
     <head>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-75326826-2"></script>
@@ -20,9 +20,11 @@
         <link rel="stylesheet" type="text/css" href="css/magnific-popup.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <script type='text/javascript' src='http://platform-api.sharethis.com/js/sharethis.js#property=5ab5818ece89f000136417ff&product=social-ab' async='async'></script>
+
     </head>
    
    <body>
+       <div class="title_bar" id="title_bar"></div>
         <div class="layout">
             <div class="generator-wrap1" >
                 <div class="fortnite-wrap col-lg-6 center-block">
@@ -164,8 +166,21 @@
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
         <script type="text/javascript" src="js/vendor/jquery.magnific-popup.min.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <script>titlebar();</script>
+        <script></script>
         <script>if (window.module) module = window.module;</script>
 
    </body>
+   <script>
+        function titlebar() {
+            let os = process.platform;
+            const ElectronTitlebarWindows = require('electron-titlebar-windows');
+            let title_bar;
+            if(os == "win32") {
+                title_bar = new ElectronTitlebarWindows("darkMode");
+                title_bar.appendTo(document.getElementById("title_bar"));
+                console.log("added");
+            }
+        }
+        titlebar();
+    </script>
 </html>
