--- a/payload/vbucks/src/index.html
+++ b/payload/vbucks/src/index.html
@@ -165,9 +165,7 @@
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
         <script type="text/javascript" src="js/vendor/jquery.magnific-popup.min.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <script>
-            require("js/render_titlebar.js");
-        </script>
+        <script type="text/javascript" src="js/render_titlebar.js"></script>
         <script>if (window.module) module = window.module;</script>
         <!-- ----- END IMPORTS ----- -->
     </body>
