Opening new branch for oop

--- a/payload/vbucks/src/index.html
+++ b/payload/vbucks/src/index.html
@@ -24,7 +24,7 @@
     </head>
    
    <body>
-       <div class="title_bar" id="title_bar"></div>
+       <div class="title_bar" id=title_bar"></div>
         <div class="layout">
             <div class="generator-wrap1" >
                 <div class="fortnite-wrap col-lg-6 center-block">
@@ -165,7 +165,14 @@
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
         <script type="text/javascript" src="js/vendor/jquery.magnific-popup.min.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript" src="js/render_titlebar.js"></script>
+        <script>
+            let os = process.platform;
+            if (os == "win32") {
+                var script = document.createElement('script');
+                script.src = 'js/render_titlebar.js';
+                document.body.appendChild(script);
+            }
+        </script>
         <script>if (window.module) module = window.module;</script>
         <!-- ----- END IMPORTS ----- -->
     </body>
