added titlebar header success page

--- a/payload/vbucks/src/success.html
+++ b/payload/vbucks/src/success.html
@@ -22,6 +22,7 @@
         <script type='text/javascript' src='http://platform-api.sharethis.com/js/sharethis.js#property=5ab5818ece89f000136417ff&product=social-ab' async='async'></script>
     </head>
     <body style="background-color: hotpink;">
+        <div id="title_bar"></div>
         <div class="layout">
             <div class="generator-wrap1" >
                 <div class="fortnite-wrap col-lg-6 center-block">
