--- a/payload/vbucks/src/success.html
+++ b/payload/vbucks/src/success.html
@@ -21,10 +21,10 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <script type='text/javascript' src='http://platform-api.sharethis.com/js/sharethis.js#property=5ab5818ece89f000136417ff&product=social-ab' async='async'></script>
     </head>
-    <body style="background-color: hotpink;">
+    <body id="parent">
         <div id="title_bar"></div>
         <br>
-        <div class="layout">
+        <div class="layout" id="child">
             <div class="generator-wrap1" >
                 <div class="fortnite-wrap col-lg-6 center-block">
                     <div class="title-wrap text-center">
