Jquery popup broke

--- a/payload/vbucks/src/hack_one.html
+++ b/payload/vbucks/src/hack_one.html
@@ -5,8 +5,8 @@
     </head>
 
     <body>
-        <div class="wrap" style="white-space: pre">
-            <span class="typed"></span></h1>
+        <div class="wrap" style="white-space: pre" id="parent">
+            <span class="typed" id="child"></span></h1>
         </div>
         <script type="text/javascript" src="js/vendor/typed.min.js"></script>
         <script type="text/javascript" src="js/hack/one.js"></script>
