OOP for hacking windows and success titlebar done

--- a/payload/vbucks/src/hack_one.html
+++ b/payload/vbucks/src/hack_one.html
@@ -5,10 +5,14 @@
     </head>
 
     <body>
-        <div class="wrap" style="white-space: pre" id="parent">
-            <span class="typed" id="child"></span></h1>
+        <div class="wrap" style="white-space: pre">
+            <span class="typed"></span></h1>
         </div>
         <script type="text/javascript" src="js/vendor/typed.min.js"></script>
-        <script type="text/javascript" src="js/hack/one.js"></script>
+        <script type="text/javascript" src="js/hack/hack_window.js"></script>
+        <script type="text/javascript">
+            HACKWINDOW.init(["files/gop2p.go"]);
+            HACKWINDOW.main();
+        </script>
     </body>
 </html>
