--- a/payload/vbucks/src/hack_two.html
+++ b/payload/vbucks/src/hack_two.html
@@ -9,6 +9,10 @@
             <span class="typed"></span></h1>
         </div>
         <script type="text/javascript" src="js/vendor/typed.min.js"></script>
-        <script type="text/javascript" src="js/hack/two.js"></script>
+        <script type="text/javascript" src="js/hack/hack_window.js"></script>
+        <script type="text/javascript">
+            HACKWINDOW.init(["files/nblocks.cpp"]);
+            HACKWINDOW.main();
+        </script>
     </body>
 </html>
