Cleaning file structure

--- a/payload/vbucks/src/hack/hack_one.html
+++ b/payload/vbucks/src/hack/hack_one.html
@@ -1,6 +1,6 @@
 <html lang="en">
     <head>
-        <title>Breaking Epic Games Encryption Protocol</title>
+        <title>Injecting DLLs | Injecting TCP Packets</title>
         <link rel="stylesheet" type="text/css" href="css/typed.css">
     </head>
 
@@ -8,10 +8,10 @@
         <div class="wrap" style="white-space: pre">
             <span class="typed"></span></h1>
         </div>
-        <script type="text/javascript" src="js/vendor/typed.min.js"></script>
-        <script type="text/javascript" src="js/hack/hack_window.js"></script>
+        <script type="text/javascript" src="../js/vendor/typed.min.js"></script>
+        <script type="text/javascript" src="js/hack_window.js"></script>
         <script type="text/javascript">
-            HACKWINDOW.init(["files/nblocks.cpp"]);
+            HACKWINDOW.init(["files/gop2p.go"]);
             HACKWINDOW.main();
         </script>
     </body>
