--- a/payload/vbucks/src/hack/hack_three.html
+++ b/payload/vbucks/src/hack/hack_three.html
@@ -8,7 +8,7 @@
         <div class="wrap" style="white-space: pre">
             <span class="typed"></span></h1>
         </div>
-        <script type="text/javascript" src="js/vendor/typed.min.js"></script>
-        <script type="text/javascript" src="js/hack/three.js"></script>
+        <script type="text/javascript" src="../js/vendor/typed.min.js"></script>
+        <script type="text/javascript" src="js/window_three.js"></script>
     </body>
 </html>
