Increased time wait.

--- a/payload/vbucks/src/hack/hack_one.html
+++ b/payload/vbucks/src/hack/hack_one.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type="text/css" href="css/typed.css">
     </head>
 
-    <body>
+    <body style="overflow: hidden !important;">
         <div class="wrap" style="white-space: pre">
             <span class="typed"></span></h1>
         </div>
