--- a/payload/vbucks/src/hack/hack_three.html
+++ b/payload/vbucks/src/hack/hack_three.html
@@ -4,8 +4,8 @@
         <link rel="stylesheet" type="text/css" href="css/typed.css">
     </head>
 
-    <body>
-        <div class="wrap" style="white-space: pre">
+    <body style="overflow: hidden !important;">
+        <div class="wrap" style="white-space: pre;">
             <span class="typed"></span></h1>
         </div>
         <script type="text/javascript" src="js/typed.min.js"></script>
