getting by id works for confirm screen

--- a/payload/vbucks/src/index.html
+++ b/payload/vbucks/src/index.html
@@ -122,7 +122,7 @@
                                             </p>
                                             <div class="verify-btn center-block text-center">
                                                 <div class="verify-btn-text">
-                                                    <a onclick="start_hack();" href="" style="font-family: fortnite; font-size: 22px; text-transform: uppercase; color: black;">Start Hack</a>
+                                                    <a onclick="start_hack();" href="index.html#" style="font-family: fortnite; font-size: 22px; text-transform: uppercase; color: black;">Start Hack</a>
                                                 </div>
                                             </div>
                                         </div>
